--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   firebase_auth: ^1.1.0
-  firebase_core: ^1.0.3
+  cloud_firestore: ^1.0.6
 
 dev_dependencies:
   flutter_test:
