--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  firebase_core: ^1.0.4
+  firebase_analytics: ^5.0.2
   cupertino_icons: ^1.0.0
   firebase_auth: ^1.1.0
   cloud_firestore: ^1.0.6
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: ^0.13.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
