--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^1.0.6
   provider: ^5.0.0
   flutter_spinkit: ^5.0.0
+  firebase_messaging: ^9.1.3
 
 dev_dependencies:
   flutter_test:
